--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
         <!--介紹-->
         <div id="about">
             <h1>About</h1>
-            <h2>
-            圖檔來不及做，希望有天能做成完整的作品集~<br>
-            但現在這邊不知道要寫啥，<br>
+            不知道要寫啥，<br>
             只好講個笑話先<br><br>-----------------我是分隔線-----------------<br><br>
             有個忍者在河邊練習射飛鏢。<br>
             這條河沒有受到一絲汙染，水質非常乾淨<br>
