--- a/index.html
+++ b/index.html
@@ -63,8 +63,16 @@
         <div id="about">
             <h1>About</h1>
             <h2>
-            不知道要寫啥，<br>
-            只好講個笑話先<br><br>-----------------我是分隔線-----------------<br><br>
+            簡單講一下，<br>    
+            網站有做RWD(但是右上角的按鈕沒做><)，按左上角貓貓會回到開頭，<br>
+            右上角的按鈕可以連結到下面不同的區域，開頭的四個圖也可以連到底下的區域。<br>
+            作業集中在Work1，分別有三個，點下去會另開分頁~<br>
+            剩下都是我的設計作品的縮圖~<br>
+            感謝老師這門課的教學，真的可以生出一個網站超有成就感的!<br>
+            我之後會抽空做出一個更精緻的作品集網站der!<br>
+            <br>
+            提供一個冷笑話作為感謝之意~~<br>
+            <br><br>-----------------我是分隔線-----------------<br><br>
             有個忍者在河邊練習射飛鏢。<br>
             這條河沒有受到一絲汙染，水質非常乾淨<br>
             有不少魚悠游其中。<br>
